--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
 <body>
     <h1>Alec Malenfant</h1>
     <p>Under Construction</p>
-    <a href="chromebook" </body>
+    <a href="chromebook">chromebook</a>
 
 </html>
