--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
     <h1>Alec Malenfant</h1>
     <p>Under Construction</p>
-    <a href="chromebook">chromebook</a>
+    <a href="chromebook.html">chromebook</a>
+    <a href="time_filler.html">time_filler</a>
 
 </html>
