Added JS_30 pages and updated page navigation

--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 <body>
     <h1>Alec Malenfant</h1>
     <p>Under Construction</p>
-    <a href="chromebook.html">chromebook</a>
-    <a href="time_filler.html">time_filler</a>
+    <a href="chromebook.html">chromebook</a> <br>
+    <a href="time_filler.html">time_filler</a> <br> 
+    <a href="JS_30/JS_30.html">Javascript 30</a> <br>
 
 </html>
