--- a/time_filler.html
+++ b/time_filler.html
@@ -7,6 +7,8 @@
 
 <body>
     <h1>Time Filler</h1>
+    <p>This is also under Construction</p>
+    <h2><a href="index.html">home</a></h2>
 
 </body>
 
