UPDATE index.html and JS_30.html links

--- a/JS_30/JS_30.html
+++ b/JS_30/JS_30.html
@@ -9,7 +9,7 @@
     <h1>Finished projects from <a href = "https://javascript30.com/"> Wes Bos' JavaScript 30 </a>challenges</h1>
     <ul>
         <li><a href="drum_kit/drum_kit.html">Drum Kit</a></li>
-        <li><a href="index.html">home</a></li>
+        <li><a href="../index.html">home</a></li>
     </ul>
 </body>
 </html>
