--- a/index.html
+++ b/index.html
@@ -12,4 +12,13 @@
     <a href="time_filler.html">time_filler</a> <br> 
     <a href="JS_30/JS_30.html">Javascript 30</a> <br>
 
+    <table>
+        <tr>
+            <td>1</td>
+            <td>2</td>
+            <td>3</td>
+    </table>
+
+</body>
+
 </html>
