--- a/JS_30/JS_30.html
+++ b/JS_30/JS_30.html
@@ -9,6 +9,8 @@
     <h1>Finished projects from <a href = "https://javascript30.com/"> Wes Bos' JavaScript 30 </a>challenges</h1>
     <ul>
         <li><a href="drum_kit/drum_kit.html">Drum Kit</a></li>
+        <li><a href="clock/index.html">CSS and JS clock</a></li>
+        <li><a href="03 - CSS Variables/index-START.html">CSS Variables</a></li>
         <li><a href="../index.html">home</a></li>
     </ul>
 </body>
