--- a/JS_30/03 - CSS Variables/index-START.html
+++ b/JS_30/03 - CSS Variables/index-START.html
@@ -22,6 +22,23 @@
   <img src="https://source.unsplash.com/7bwQXzbF6KE/800x500">
 
   <style>
+    /*Define and initialize CSS variables Globally*/
+    :root{
+      --base: ##ffc600;
+      --spacing: 10px;
+      --blur: 10px
+    }
+
+    img{
+      padding: var(--spacing); /*how to use the variables*/
+      background: var(--base);
+      filter: blur(var(--blur));
+
+    }
+
+    .h1{
+      color: var(--base);
+    }
 
     /*
       misc styles, nothing to do with CSS variables
@@ -46,6 +63,21 @@
   </style>
 
   <script>
+    const inputs = document.querySelectorAll(`.controls input`); /*returns a node list of all inputs on the page*/
+
+    function handleUpdate(){
+      const suffix = this.dataset.sizing || ''; //dataset is an object that contains all of the data attributes from that specific element. Here it's just data-sizing for the sliders or nothing for the hex-code
+      document.documentElement.style.setProperty(`--${this.name}`,this.value + suffix); 
+      
+    }
+
+    // Listen for a change event on each of the inputs
+    inputs.forEach(input => input.addEventListener('change', handleUpdate));
+    inputs.forEach(input => input.addEventListener('mousemove', handleUpdate)); //handle the updates WHILE the mosue is dragging the slider
+
+
+    
+
   </script>
 
 </body>
